deleted background, added styles to about and footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,3 @@
-/*.test {
-  width: 1100px;
-  height: 3028px;
-  position: absolute;
-  top: 0;
-  left: 723px;
-  margin: auto;
-  background-image: url(../fff.png);
-  opacity: 0.2;
-  background-size: 100%;
-  z-index: 100;
-}*/
-
 body {
   color: #000;
   font-family: 'Raleway', sans-serif;
@@ -58,9 +45,9 @@ a {
 }
 
 .header__address-item {
-  font-style: normal;
   display: block;
   font-size: 18px;
+  font-style: normal;
   line-height: 1.35;
 }
 
@@ -145,39 +132,39 @@ a {
 }
 
 .lots {
+  padding: 180px 24px 120px;
   color: #fff;
   line-height: 1.2;
-  padding: 180px 24px 120px;
 }
 
 .lots__titile {
+  margin: 0 0 27px 40px;
   color: #000;
   font-weight: 700;
   font-size: 40px;
   line-height: 47px;
   text-transform: uppercase;
-  margin: 0 0 27px 40px;
 }
 
 .lots__card-list {
   display: grid;
-  justify-content: space-between;
   grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
   gap: 25px;
   margin-bottom: 30px;
 }
 
 .lots__card-list-item {
-  padding: 48px 40px;
   position: relative;
   z-index: 2;
+  padding: 48px 40px;
 }
 
 .card {
-  height: 100%;
   display: grid;
   align-content: space-between;
   gap: 35px;
+  height: 100%;
 }
 
 .card-link {
@@ -206,20 +193,20 @@ a {
 }
 
 .card__title {
+  position: relative;
+  z-index: 2;
   font-weight: 700;
   font-size: 22px;
   text-decoration: underline;
-  text-transform: uppercase;
-  position: relative;
-  z-index: 2;
   text-underline-offset: 2px;
+  text-transform: uppercase;
 }
 
 .card__text {
-  font-weight: 400;
-  font-size: 20px;
   position: relative;
   z-index: 2;
+  font-weight: 400;
+  font-size: 20px;
 }
 
 .lots__look-more-link {
@@ -227,4 +214,96 @@ a {
   color: #000;
   font-size: 20px;
   line-height: 23px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 1fr 693px;
+  justify-content: space-between;
+  padding: 35px 24px 180px 71px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__text {
+  margin-top: 99px;
+}
+
+.about__title {
+  margin: 0 0 100px 0;
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 24px;
+}
+
+.about__column-text {
+  width: 687px;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+/* Корректировка переноса строки */
+.special-width {
+  display: block;
+  width: 690px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 0 50px 82px 50px;
+}
+
+.footer__address {
+  width: 265px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.35;
+}
+
+.footer__address-item {
+  display: block;
+}
+
+.footer__navigation__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  line-height: 21px;
+  list-style: none;
+}
+
+.footer__social-list-item {
+  display: flex;
+  justify-content: flex-end;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
