Correct style and index.html, added README.md

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ a {
   align-items: center;
   gap: 30px;
   padding: 92px 50px;
+  font-size: 18px;
 }
 
 .header__navigation__list {
@@ -27,7 +28,6 @@ a {
 }
 
 .header__navigation__list-link {
-  font-size: 18px;
   white-space: nowrap;
 }
 
@@ -68,10 +68,7 @@ a {
 
 .overlay {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  inset: 0;
   z-index: 1;
   opacity: 0.6;
   background-color: #000;
@@ -285,6 +282,11 @@ a {
 
 .footer__address-item {
   display: block;
+  font-style: normal;
+}
+
+.footer__address-link {
+  white-space: nowrap;
 }
 
 .footer__navigation__list {
@@ -296,7 +298,7 @@ a {
   list-style: none;
 }
 
-.footer__social-list-item {
+.footer__social-list {
   display: flex;
   justify-content: flex-end;
   gap: 48px;
