--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,9 @@
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: 'Raleway', sans-serif;
+  font-family: Raleway, Arial, sans-serif;
+  color: #000;
+  font-weight: 400;
 }
 
 h1,
@@ -27,6 +29,7 @@ blockquote {
 
 a {
   color: inherit;
+  text-underline-offset: 4px;
 }
 
 img {
